--- a/app-demo/package.json
+++ b/app-demo/package.json
@@ -17,6 +17,7 @@
         "vite": "^2.9.11"
     },
     "dependencies": {
+        "@headlessui/vue": "^1.6.5",
         "@inertiajs/inertia": "^0.11.0",
         "@inertiajs/inertia-vue3": "^0.6.0",
         "@inertiajs/progress": "^0.2.7",
