--- a/app-demo/package.json
+++ b/app-demo/package.json
@@ -23,6 +23,8 @@
         "@inertiajs/progress": "^0.2.7",
         "@vitejs/plugin-vue": "^2.3.3",
         "npm": "^8.13.2",
+        "primeicons": "^5.0.0",
+        "primevue": "^3.15.0",
         "vue": "^3.2.36"
     }
 }
