--- a/app-demo/package.json
+++ b/app-demo/package.json
@@ -9,6 +9,8 @@
         "@tailwindcss/forms": "^0.5.2",
         "autoprefixer": "^10.4.7",
         "axios": "^0.25",
+        "eslint": "^8.19.0",
+        "eslint-plugin-vue": "^9.2.0",
         "laravel-vite-plugin": "^0.2.1",
         "lodash": "^4.17.19",
         "postcss": "^8.4.14",
